@@ -1,13 +1,21 @@
 # Copyright (c) 2008 Mikolaj Golub
 # All rights reserved.
 #
-# $Id: Makefile,v 1.3 2008/06/03 20:35:31 mikolaj Exp $
+# $Id: Makefile,v 1.4 2009/07/05 17:36:24 mikolaj Exp $
 
-PROG=	devstat
+PROG = devstat
 
-LDADD=	-ldevstat
+SYSTEM != uname -s
 
-WARNS=	-Wsystem-headers -Werror -Wall -Wno-format-y2k -W \
+.if ${SYSTEM} == "FreeBSD"
+SYS = freebsd
+LDADD = -ldevstat
+.elif ${SYSTEM} == "NetBSD"
+SYS = netbsd
+LDADD = -lkvm
+.endif
+
+WARNS = -Wsystem-headers -Werror -Wall -Wno-format-y2k -W \
 	-Wstrict-prototypes -Wmissing-prototypes \
 	-Wpointer-arith -Wreturn-type -Wcast-qual \
 	-Wwrite-strings -Wswitch -Wshadow -Wcast-align \
@@ -18,8 +26,8 @@ CFLAGS +=	${WARNS}
 
 all:	${PROG}
 
-${PROG}:	${PROG}.c
-	${CC} ${CFLAGS} ${LDADD} ${PROG}.c -o ${PROG}
+${PROG}:	${PROG}_${SYS}.c
+	${CC} ${CFLAGS} ${LDADD} ${PROG}_${SYS}.c -o ${PROG}
 
 clean:
-	rm -f ${PROG}
+	rm -f ${PROG} *.core
