@@ -1,3 +1,9 @@
+devstat (0.3)
+
+  * NetBSD support added
+
+-- Mikolaj Golub <to.my.trociny@gmail.com> 2009/07/05
+
 devstat (0.2)
 
   * option added to extract statistics from core file
